--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,9 @@
-body{
+*{
   margin: 0;
-  background: #000;
+  padding: 0;
+}
+body{
+  background-color: #efefef;
 }
 a{
   text-decoration: none;
@@ -8,13 +11,17 @@ a{
 li{
   list-style: none;
 }
-.clearfix{
+.clearfix::after {
   content: "";
   display: block;
   clear: both;
 }
 .topNavBar{
   margin-top: 25px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 .navBar{
   float: right;
@@ -55,13 +62,93 @@ li{
 }
 .logo .card{
   color: #9a9da2;
-  margin-left: 3px;
+  margin-left: 12px;
 }
 
+.banner{
+  background-image: url(../img/rs-cover.jpg);
+  background-position: center center;
+  background-size: cover;
+  height: 515px;
+}
+.banner .mask{
+  background-color: rgba(0,0,0,0.8);
+  height: 515px;
+}
+.user-card{
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #ffffff;
+}
+.user-card .welcome{
+  background-color: #e6686a;
+  color: #FFF;
+  display: inline-block;
+  padding: 5px 17px;
+  line-height: 18px;
+  position: relative;
+}
+.welcome .triangle{
+  display: block;
+  border: 10px solid transparent;
+  width: 0;
+  border-top-width: 0;
+  border-left-color:#e6686a; 
+  position: absolute;
+  top: 100%;
+  left: 5px;
+}
+.user-card .picture{
+  float: left;
+}
+.user-card .personal-info{
+  float: left;
+  margin-left: 65px;
+  width: 470px;
+}
+.user-card .personal-info h1{
+  margin-top: 18px;
+}
+.user-card .personal-info hr{
+  margin: 20px 0;
+  border-top: 1px solid #DEDEDE;
+}
+.user-card .profile{
+  padding: 50px;
+}
 
+.personal-info .text .title{
+  float: left;
+  line-height: 50px;
+  font-weight: bold;
+}
+.personal-info .text .data{
+  margin-left: 100px;
+  line-height: 50px;
+  color: #9da0a7;
+}
+.media{
+  background-color: #e6686a;
+}
 
-
-
+.media .iconfont{
+  font-size: 30px;
+  color: #FFF;
+  line-height: 30px;
+}
+.media{
+  text-align: center;
+}
+.media a{
+  margin: 16px;
+  display: inline-block;
+  border-radius: 100%;
+  padding: 5px;
+}
+.media a:hover{
+  background-color: #CF5D5F;
+}
 
 
 
