--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ li{
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   color: #b7b7b7;
   transition: all 0.5s;
   padding: 20px 0;
@@ -303,6 +303,28 @@ h1,h2,h3,h4,h5{
 }
 .swiper-button-next, .swiper-button-prev{
   top: 54%;
+}
+.message{
+  margin-top: 60px;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+}
+.message h2{
+  text-align: center;
+  font-size: 34px;
+  font-weight: 600;
+  margin-bottom: 35px;
+}
+
+.message > ol{
+  border-top: 1px solid #DDD;
+}
+
+.message > ol > li{
+  padding: 16px;
+  border-bottom: 1px solid #DDD;
 }
 
 
